--- a/ivTAP_srv_64/ivTAP.properties
+++ b/ivTAP_srv_64/ivTAP.properties
@@ -3,7 +3,7 @@ bindAddress=127.0.0.1
 bindPort=20004
 tenantsCheckInterval=10
 smptRelayServer=10.0.0.2
-alertEmailRecipient=unixguide@narod.ru
+alertEmailRecipient=email@somedomain.com
 controlMsgIdleTimeout=60
 clientBytesIdleTimeout=300
 
